app/assets/stylesheets/base.css.scss
@import "variables.css.scss";

html,
body {
  width: 100%;
  height: 100%;
}

header, 
section, 
footer, 
h1, 
h2, 
h3,
h4, 
h5, 
h6,
p, 
.modal,
.nav {
  font-family: $main-font;
  font-weight: 700;
  letter-spacing: 1px;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2.75rem;
}

h3 {
  font-size: 2.25rem;
}

h4 {
  font-size: 1.75rem;
}

h5 {
  font-size: 1.5em;
}

h6 {
  font-size: 1rem;
}

p {
  font-size: 1rem;
}

.clickable {
  cursor: pointer;
}

.highlight-title:hover{
  color:$highlight-text-color;
}

.row {
  margin-left:0;
  margin-right:0;
}

@media screen and (min-width: 768px) {
  .equal, .equal > div[class*='col-'] {  
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex:0 auto;
  }
}

a {
  color: $palette-color5
}
a:hover {
  color: $palette-color4;
}

img {
  max-width: 100%;
}

.navbar-default, 
#google_translate_element .goog-te-gadget-simple, 
#google_translate_element span a,
.navbar-default .navbar-toggle,
.header {
  background-color: $palette-color1;
  color: $palette-color6;
}
.school-info-section {
  background-color: $palette-color1;
}
.take-action-section {
  background: $palette-color1;
}

.cover {
  display: table;
  width: 100%;
  /*height: auto;*/ 
  height: 100%;
  padding: 100px 0;
  text-align: center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  
  .cover-body {
    display: table-cell;
    vertical-align: middle;

    .brand-heading {
      font-size: 40px;
    }
    .intro-text {
      font-size: 18px;
    }
  }
}

.whitespace {
  display: table;
  height: 50%;
  width: 100%;
}

@media(min-width:768px) {
  .cover {
    padding: 0;
  }

  .cover .cover-body .brand-heading {
    font-size: 100px;
  }

  .cover .cover-body .intro-text {
    font-size: 26px;
  }
}

@media (min-width: 1200px) {
  .header .container {
    width: 100%;
  }
}

.btn-circle {
  width: 70px;
  height: 70px;
  margin-top: 15px;
  padding: 7px 16px;
  border: 2px solid $palette-color6;
  border-radius: 100%!important;
  font-size: 40px;
  color: $palette-color6;
  background: 0 0;
  -webkit-transition: background .3s ease-in-out;
  -moz-transition: background .3s ease-in-out;
  transition: background .3s ease-in-out;
}

.btn-circle:hover,
.btn-circle:focus {
  outline: 0;
  color: $palette-color3;
  border: 2px solid $palette-color5;
  background: rgba(255,255,255,.1);
}

.btn-circle i.animated {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-duration: 1s;
  -moz-transition-property: -moz-transform;
  -moz-transition-duration: 1s;
}

.btn-circle:hover i.animated {
  -webkit-animation-name: pulse;
  -moz-animation-name: pulse;
  -webkit-animation-duration: 1.5s;
  -moz-animation-duration: 1.5s;
  -webkit-animation-iteration-count: infinite;
  -moz-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  -moz-animation-timing-function: linear;
}


.section-title{
  text-align:center; 
  text-transform: uppercase;
  padding: 1.4rem 0;
  font-weight: 600;
}

@media (min-width: 768px) {
  .section-title {
    font-size: 4rem;
  }
}

.padding-0{
  padding: 0;
}

#aboutModal {
  z-index: 99999;
}

#aboutModal .modal-title{
  font-size: 1.5em;
  color: white;
}

#next-steps {
  text-align: center;
  padding-top:2em;
}

